[gd_scene load_steps=14 format=3 uid="uid://bx7mb8xvqhixr"]

[ext_resource type="Script" path="res://Scripts/pick_RAT.gd" id="1_qotdr"]
[ext_resource type="Texture2D" uid="uid://psm1dnedqwge" path="res://Assets/Vermin Free Asset Pack/Animations/Infected Mouse/InfectedMouseIdleSide.png" id="2_8k03c"]
[ext_resource type="Script" path="res://Scripts/gas_toxico.gd" id="3_yy134"]
[ext_resource type="AudioStream" uid="uid://cl58b74ax3or1" path="res://Sound effects/somersault_01.wav" id="4_lla2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81jlv"]

[sub_resource type="Animation" id="Animation_mva4u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n8xmr"]
resource_name = "idle"
length = 3.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rifl1"]
_data = {
"RESET": SubResource("Animation_mva4u"),
"idle": SubResource("Animation_n8xmr")
}

[sub_resource type="Gradient" id="Gradient_p8ts5"]
offsets = PackedFloat32Array(0, 0.556701)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hl2i1"]
gradient = SubResource("Gradient_p8ts5")

[sub_resource type="Curve" id="Curve_fkrle"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5o1fc"]
curve = SubResource("Curve_fkrle")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ubh60"]
lifetime_randomness = 1.0
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 7.0
emission_ring_radius = 7.0
emission_ring_inner_radius = 0.0
particle_flag_disable_z = true
direction = Vector3(-1, -1, 0)
spread = 40.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_5o1fc")
color = Color(0, 0.764706, 0, 1)
color_initial_ramp = SubResource("GradientTexture1D_hl2i1")
turbulence_enabled = true
turbulence_noise_speed = Vector3(3, 3, 3)

[node name="RAT" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
mass = 0.5
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_qotdr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_81jlv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rifl1")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
scale = Vector2(2, 2)
texture = ExtResource("2_8k03c")
hframes = 4

[node name="gas_toxico" type="GPUParticles2D" parent="."]
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_ubh60")
lifetime = 3.0
script = ExtResource("3_yy134")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-14, -14)

[node name="damage_area_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Direction_Timer" type="Timer" parent="."]
autostart = true

[node name="Audio_lanzar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lla2r")
volume_db = -10.0

[connection signal="timeout" from="damage_area_Timer" to="." method="_on_damage_area_timer_timeout"]
[connection signal="timeout" from="Direction_Timer" to="." method="_on_direction_timer_timeout"]
